--- a/01-03-alvise-spadea/03-html-forms/01-astronaut-application/index.html
+++ b/01-03-alvise-spadea/03-html-forms/01-astronaut-application/index.html
@@ -66,7 +66,7 @@
             </select>
             <p>Contact Information:</p>
             <label for="email"></label>
-            <input type="email" name="email" id="email" placeholder="Email Here" required>
+            <input type="email" name="email" id="email" placeholder="Emaisdl Here" required>
             <label for="phone"></label>
             <input type="tel" name="phone" id="phone" placeholder="Your Phone Number Here" maxlength="10" minlength="10" required>
             <p>Address:</p>
